# help

./: CMakeLists.txt  main.cpp
src/core/: SquareMatrix.hpp  SquareMatrix.tpp
src/include/: Algorithms.hpp  Exceptions.hpp  base_iter.hpp
src/include/Array/: ArraySequence.hpp  ArraySequence.tpp  DynamicArray.hpp  DynamicArray.tpp  ImmutableArraySequence.hpp  MutableArraySequence.hpp  array_iter.hpp
src/include/List/: ImmutableListSequence.hpp  LinkedList.hpp  LinkedList.tpp  ListSequence.hpp  ListSequence.tpp  MutableListSequence.hpp  list_iter.hpp
src/include/Sequence/: Iterator.hpp  Sequence.hpp
